--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "get-trim-all": "^1.0.4",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5"
   },
   "devDependencies": {
