--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.18.2",
     "get-trim-all": "^1.0.4",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.5"
+    "mongoose": "^7.0.5",
+    "nodemailer": "^6.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
