worked forgot password and reset password

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5",
     "nodemailer": "^6.9.1",
+    "redis": "^4.6.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
